bk_ida/gccida/c3/copy_rtx_and_substitute
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_and_substitute/src/integrate.c:2348:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode pool_mode_for_function; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_and_substitute/src/integrate.c:2354:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_and_substitute/src/integrate.c:2361:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_and_substitute/src/integrate.c:2363:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v29; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_and_substitute/src/integrate.c:2364:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v30; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_and_substitute/src/integrate.c:2387:4: error: expected ';' after expression
rtx v53; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_and_substitute/src/integrate.c:2387:5: error: use of undeclared identifier 'v53'
rtx v53; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_and_substitute/src/integrate.c:2391:4: error: expected ';' after expression
rtx v57; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_and_substitute/src/integrate.c:2391:5: error: use of undeclared identifier 'v57'
rtx v57; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_and_substitute/src/integrate.c:2395:4: error: expected ';' after expression
rtx v61; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_and_substitute/src/integrate.c:2395:5: error: use of undeclared identifier 'v61'
rtx v61; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_and_substitute/src/integrate.c:2397:4: error: expected ';' after expression
rtx v63; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_and_substitute/src/integrate.c:2397:5: error: use of undeclared identifier 'v63'
rtx v63; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_and_substitute/src/integrate.c:2398:4: error: expected ';' after expression
rtx v64; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_and_substitute/src/integrate.c:2398:5: error: use of undeclared identifier 'v64'
rtx v64; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_and_substitute/src/integrate.c:2399:4: error: expected ';' after expression
rtx v65; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_and_substitute/src/integrate.c:2399:5: error: use of undeclared identifier 'v65'
rtx v65; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_and_substitute/src/integrate.c:2401:4: error: expected ';' after expression
rtx v67; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_and_substitute/src/integrate.c:2401:5: error: use of undeclared identifier 'v67'
rtx v67; // rbp 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_and_substitute/src/obj/integrate.o] Error 1
